# arkhost-ui-slint

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  manifest.yaml
.cargo/: config  config.toml
arkhost_api/: Cargo.toml
arkhost_api/src/: consts.rs  lib.rs
arkhost_api/src/clients/: arkhost.rs  asset.rs  common.rs  id_server.rs  mod.rs  quota.rs
arkhost_api/src/models/: api_arkhost.rs  api_passport.rs  api_quota.rs  common.rs  mod.rs
arkhost_ota/: Cargo.toml
arkhost_ota/resource/: release.gpg  release.pub
arkhost_ota/src/: bin_diff.rs  lib.rs
arkhost_ota/tests/: bin_diff.rs  ota.rs
arkhost_ota/tests/input/: other.gpg  other.pub  other.sig  test.sig  test_fail.sig
publish_tool/: Cargo.toml
publish_tool/src/: main.rs
release_tool/: Cargo.toml
release_tool/src/: main.rs
resource/windows/: resources.rc
src/: desktop_utils.rs  lib.rs  main.rs
src/app/: api_controller.rs  auth.rs  env.rs  ipc.rs  ipc_auth_comm.rs  mod.rs  ota.rs  program_options.rs  ui.rs
src/app/api_controller/: mod.rs
src/app/api_model/: mod.rs
src/app/api_user_model/: mod.rs
src/app/api_worker/: mod.rs
src/app/app_state/: mapping.rs  mod.rs  model.rs
src/app/asset_controller/: mod.rs
src/app/asset_worker/: mod.rs
src/app/auth_controller/: ipc.rs  mod.rs
src/app/auth_worker/: geetest_sdk.rs  ipc.rs  mod.rs
src/app/controller/: account_controller.rs  api_model.rs  api_user_model.rs  app_state_controller.rs  config_controller.rs  game_controller.rs  game_operation_controller.rs  image_controller.rs  login_window_context.rs  mod.rs  model.rs  ota_controller.rs  request_controller.rs  rt_api_model.rs  sender.rs  session_controller.rs  slot_controller.rs  user_controller.rs
src/app/env/: mod.rs
src/app/game_data/: mod.rs
src/app/rt_api_model/: mod.rs
src/app/utils/: app_metadata.rs  app_user_model.rs  cache_control.rs  cache_manager.rs  data_dir.rs  db.rs  ext_link.rs  levenshtein_distance.rs  mod.rs  notification.rs  subprocess.rs  time.rs  user_state.rs  webview2.rs
src/app/webview/: mod.rs
src/app/webview/auth/: consts.rs  mod.rs  subprocess_webview.rs
ui/: app-window.slint  callbacks.slint  font-globals.slint  gacha-info.slint  game-info.slint  login-window.slint  mock-data.slint  slot-info.slint  slot-tier-consts.slint  state-globals.slint  theme.slint  user-info.slint
ui/components/: banner-notification.slint  char-illust.slint  closure-studio-logo.slint  gacha-carousel.slint  image-carousel.slint  map-selector.slint  placeholder-card.slint
ui/pages/: about-page.slint  game-card-battle.slint  game-card-doctor-info.slint  game-card-log.slint  game-card-operation-shotcut-panel.slint  game-card-options.slint  game-card.slint  game-info-page.slint  game-status-badge.slint  slot-card.slint  slot-list.slint  slot-page.slint  slot-tier-card.slint  user-card.slint
