[workspace]
members = ["arkhost_api"]

[package]
name = "arkhost-ui-slint"
version = "0.2.0"
authors = ["WG <wg138940@outlook.com>"]
edition = "2021"
build = "build.rs"
publish = false

[features]
default = ["desktop-app"]
desktop-app = ["dep:winit", "dep:ipc-channel", "dep:subprocess", "dep:argh"]

[dependencies]
slint = { version = "1.4.1", features = [
    "std",
    "backend-winit",
    "renderer-skia",
    "compat-1-2"
], default-features = false }
i-slint-backend-winit = "1.4.1"
arkhost-api = { path = "arkhost_api" }
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_repr = "0.1.17"
wry = { version = "0.35", features = ["os-webview"], default-features = false }
winit = { version = "0.29", features = ["rwh_05"], optional = true }
ipc-channel = { version = "0.18.0", features = ["async"], optional = true }
subprocess = { version = "0.2.9", optional = true }
argh = { version = "0.1.12", optional = true }
anyhow = "1.0.75"
thiserror = "1.0.50"
home = "0.5.5"
futures = "0.3.29"
futures-util = "0.3.29"
async-trait = "0.1.74"
reqwest = { version = "0.11.22", features = ["gzip", "brotli", "rustls-tls"], default-features = false }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
http-cache = { version = "0.17.0", default-features = false }
http-cache-reqwest = { version = "0.12.0", default-features = false }
image = { version = "0.24.7", features = ["webp"], default-features = false }
bytes = "1.5.0"
derivative = "2.2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
open = "5.0.1"
notify-rust = "4"

# for implementing http-cache CacheManager
bincode = "1.3.3"
cacache = { version = "12.0.0", default-features = false, features = ["mmap", "tokio-runtime"] }
http-cache-semantics = "1.0.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_Shell"] }

[build-dependencies]
slint-build = "1.4.1"
embed-resource = "2.4"

[target.'cfg(windows)'.build-dependencies]
static_vcruntime = "2.0"

[[bin]]
name = "closure-studio"
path = "src/main.rs"

[profile.release]
incremental = true
opt-level = 's'
strip = true
lto = true
panic = 'abort'
