[workspace]
members = ["arkhost_api", "arkhost_ota", "publish_tool"]

[package]
name = "arkhost-ui-slint"
version = "0.2.2"
authors = ["WG <wg138940@outlook.com>"]
edition = "2021"
build = "build.rs"
publish = false

[features]
desktop-app = [
    "slint/backend-winit",
    "dep:winit",
    "dep:ipc-channel",
    "dep:single-instance",
    "dep:self-replace"
]
android-app = [
    "slint/backend-android-activity-05",
    "dep:openssl",
]
renderer-skia = ["slint/renderer-skia"]
renderer-femtovg = ["slint/renderer-femtovg"]

[dependencies]
arkhost-api = { path = "arkhost_api" }
arkhost-ota = { path = "arkhost_ota" }

slint = { version = "1.5", features = [
    "std",
    "compat-1-2",
], default-features = false }
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.108"
serde_repr = "0.1.17"
wry = { version = "0.35", features = ["os-webview"], default-features = false }
winit = { version = "0.29", features = ["rwh_05"], optional = true }
ipc-channel = { version = "0.18.0", features = ["async"], optional = true }
single-instance = { version = "0.3.3", optional = true }
self-replace = { version = "=1.2.0", optional = true } # 1.3本地实测没有生效
openssl = { version = "0.10", features = ["vendored"], optional = true }
argh = "0.1.12"
anyhow = "1.0.75"
thiserror = "1.0.50"
home = "0.5.5"
futures = "0.3.29"
futures-util = "0.3.29"
async-trait = "0.1.74"
reqwest = { version = "0.11.22", features = [
    "gzip",
    "brotli",
    "rustls-tls",
    "blocking",
], default-features = false }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
http-cache = { version = "0.17.0", default-features = false }
http-cache-reqwest = { version = "0.12.0", default-features = false }
image = { version = "0.24.7", features = ["webp"], default-features = false }
bytes = "1.5.0"
derivative = "2.2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
open = "5.0.1"
notify-rust = "4"
digest = "0.10.7"
hex = "0.4.3"
sha2 = "0.10.8"
url = "2.5"
semver = { version = "1.0.22", features = ["serde"] }
humansize = "2.1.3"
chrono = "0.4"
http-cache-semantics = "1.0.1"
serde_bytes = "0.11.14"
heed = "0.20.0"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }


[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
slint-build = "1.5"
embed-resource = "2.4"
semver = "1.0.22"

[target.'cfg(windows)'.build-dependencies]
static_vcruntime = "2.0"

[[bin]]
name = "closure-studio"
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
opt-level = 's'
strip = true
lto = true
panic = 'abort'
