[package]
name = "arkhost-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bitflags = "2.4.1"
chrono = "0.4.31"
futures = "0.3.29"
# TODO: 可选TLS
# 国内节点在reqwest的default-tls下会发生连接错误（TLS版本问题）
reqwest = { version = "0.11.22", features = ["json"], default-features = false }
reqwest-middleware = "0.2.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_with = { version = "3.4.0", features = ["chrono", "json"] }
thiserror = "1.0.50"
serde_json = "1.0.108"
serde_repr = "0.1.17"
bytes = "1.5.0"
base64 = "0.21.5"
eventsource-client = "0.12.2"
