[package]
name = "arkhost-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bitflags = "2.4"
chrono = "0.4"
futures = "0.3"
# TODO: 可选TLS
# 国内节点在reqwest的default-tls下会发生连接错误（TLS版本问题）
reqwest = { version = "0.11", features = ["json"], default-features = false }
reqwest-middleware = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.4", features = ["chrono", "json"] }
thiserror = "1.0.50"
serde_json = "1.0"
serde_repr = "0.1"
bytes = "1.5"
base64 = "0.21"
eventsource-client = "0.12"
