[package]
name = "release_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
arkhost-ota = { path = "../arkhost_ota" }
anyhow = "1"
argh = { version = "0.1.12" }
tokio = { version = "1.34.0", features = ["full"] }
cargo = "=0.76"
sha2 = "0.10.8"
digest = "0.10.7"
hex = "0.4.3"
serde_json = "1.0.108"
